--- a/prototype/register.html
+++ b/prototype/register.html
@@ -31,7 +31,8 @@
   <script>
     // Auto-redirect if already registered
     if (localStorage.getItem("student")) {
-      window.location.href = "index.html";
+     window.location.href = "prototype/index.html";
+
     }
 
     document.getElementById("registerForm").addEventListener("submit", function(e) {
